--- a/home.css
+++ b/home.css
@@ -704,6 +704,14 @@
 .home-text19 {
   color: rgb(124, 124, 128);
   line-height: 24px;
+
+.home-text35 {
+  color: rgb(255, 255, 255);
+  text-align: center;
+  font-family: Playfair Display;
+  font-weight: 500;
+  line-height: 73px;  
+  
 }
 .home-text21 {
   font-style: normal;
