--- a/home.css
+++ b/home.css
@@ -730,7 +730,7 @@
 }
 .home-image3 {
   width: 128px;
-  height: auto;
+  height: 128px;
   align-self: center;
   object-fit: cover;
   margin-left: 0px;
